my-carbon-playground : documentation download feature added
